Fix the version dropdown text overflowing the select box

--- a/public/globals.css
+++ b/public/globals.css
@@ -8,7 +8,7 @@
   --side-nav-width: 288px;
   --side-nav-collapsed-width: 42px;
   --select-dropdown-default-height: 28px;
-  --select-dropdown-default-width: 130px;
+  --select-dropdown-default-width: 165px;
   --side-nav-width: min(20%, 300px);
   --api-side-nav-width: max(14%, 220px);
   --content-div-width: min(17%, 250px);
